# primitive-algorithms

./: .gitignore  ChangeLog.md  README.md  TODO.md  default.nix  primitive-algorithms.cabal  shell.nix
src/: Test.hs
src/Data/Primitive/: ByteArray.hs  Int.hs  MutableByteArray.hs  Word.hs
src/Data/Primitive/Algorithm/: Insertion.hs
src/Data/Primitive/Algorithm/Insertion/: Test.hs
